--- a/pag1.html
+++ b/pag1.html
@@ -42,6 +42,7 @@
                 <li><a href="https://www.instagram.com/operarioferroviario/"><img src="redessociais/insta1.png" alt="insta" width="15%">@operarioferroviario</a></li>
                 <li><a href="https://www.facebook.com/OFECoficial/"><img src="redessociais/face1.png" alt="face" width="15%">Operário Ferroviário</a></li>
             </ul>
+            <p>lalalalala</p>
         </aside>
     </main>
     <footer>Site criado por um fã, sem inteções monetárias.</footer>
