--- a/pag1.html
+++ b/pag1.html
@@ -45,7 +45,7 @@
             <p>lalalalala</p>
         </aside>
     </main>
-    <footer>Site criado por um fã, sem inteções monetárias.</footer>
+    <footer>Site criado por um fã, sem inteções monetárias lalalalala.</footer>
     
 </body>
 </html>
